Add Arabic to resturant page / add dynaimc rate

--- a/src/app/Components/dine-out/dine-out.component.html
+++ b/src/app/Components/dine-out/dine-out.component.html
@@ -108,7 +108,7 @@
               
               <h5 class="mt-2">{{item.restaurantName}}</h5>
             <h6 class="color">{{item.restaurantType}}</h6>
-            <ngb-rating [max]="5" [rate]=4 [readonly]="true"></ngb-rating>
+            <ngb-rating [max]="5" [rate]="item.rate" [readonly]="true"></ngb-rating>
             </div>
           </div>
   
