--- a/src/app/Components/resturant-list/resturant-list.component.html
+++ b/src/app/Components/resturant-list/resturant-list.component.html
@@ -1,5 +1,5 @@
     <div class="col-md-12 pt-3">
-      <h4 class="start-title">Branches</h4>
+      <h4 class="start-title">{{"branch" | translate}} </h4>
       <div class="jumbotron" *ngFor="let item of returantBrnches">
         <div class="container">
           <span class="area-icon">{{item  | slice:0:2 }}</span>
@@ -8,7 +8,7 @@
           <!-- <p class="info-value"><span> Gas Station</span></p> -->
           <span class="text float-right">
             <i class="far fa-check-circle"></i>
-            Delivers to you
+            {{"delevertou" | translate}} 
           </span>
           <p class="info-2-value"><i class="far fa-clock"></i>{{workOpen}} - {{WrokClose}}</p>
         </div>
