--- a/src/app/Components/resturant-reviews/resturant-reviews.component.html
+++ b/src/app/Components/resturant-reviews/resturant-reviews.component.html
@@ -10,14 +10,14 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">{{"name" | translate}}:</span>
             </div>
-            <input type="text" [(ngModel)]="userName" class="form-control" placeholder="Your Name"  aria-describedby="basic-addon1">
+            <input type="text" [(ngModel)]="userName" placeholder="Enter your name" class="form-control" placeholder="Your Name"  aria-describedby="basic-addon1">
           </div>
           
           <div class="input-group mb-3">
             <div class="input-group-append">
               <span class="input-group-text" id="basic-addon2"> {{"rate" | translate}} :</span>
             </div>
-            <input type="number" [(ngModel)]="rate" class="form-control" max="5" min="1" aria-describedby="basic-addon2">
+            <input type="number"  [(ngModel)]="rate" class="form-control" aria-describedby="basic-addon2">
            
           </div>
           
