--- a/src/app/Components/pastorderdetails/pastorderdetails.component.scss
+++ b/src/app/Components/pastorderdetails/pastorderdetails.component.scss
@@ -31,10 +31,20 @@
     width: 24%;
     border-radius: 6px;
     color: #fff;
-    font-size: 13px;
+    font-size: 20px;
     border: none;
 }
 
+.track-btn{
+    background-color: #dbd7d7;
+    color: #e5533a;
+    float: right;
+    padding: 3%;
+    width: 24%;
+    border-radius: 6px;
+    font-size: 20px;
+    border: none;
+}
 
 .order-details{
     margin-top: 40px;
