--- a/src/app/Components/payment/payment.component.html
+++ b/src/app/Components/payment/payment.component.html
@@ -103,13 +103,33 @@
                                     Cash On Delivery
                                 </label>
                             </div>
-                            <div class="form-check disabled">
-                                <input class="form-check-input" type="radio" name="paymentRadio" id="creditRadio" value="CreditCard" disabled>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="paymentRadio" id="creditRadio" value="CreditCard">
                                 <label class="form-check-label" for="creditRadio">
-                                  Credit Card <a>add new</a>
+                                  <a data-toggle="modal"
+                                  data-target="#paypalModal" data-backdrop="static"><img src="../../../assets/paypal.png"> PayPal</a>
                                 </label>
                               </div>
                         </div>
+
+                        <!-- PayPal Modal -->
+                        <div class="modal" tabindex="-1" role="dialog" id="paypalModal">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title">Pay by PayPal</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                    <ngx-paypal  [config]="payPalConfig">
+                                    </ngx-paypal>
+                                </div>
+                                
+                              </div>
+                            </div>
+                          </div>
 
                         <!-- Promo Card -->
                         <div class="promo-card details-div">
