--- a/src/app/Components/searchdetails/searchdetails.component.html
+++ b/src/app/Components/searchdetails/searchdetails.component.html
@@ -1,27 +1,8 @@
 <div id="resturant-card" class="container resturant-card">
-    <div class="card">
-      <div id="demo" class="carousel slide card-rest" data-ride="carousel">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}"
-                alt="First slide">
-            </div>
-            <!-- <div class="carousel-item active" *ngFor="let photo of selectedResturant.restaurantFeaturedPhotos">
-              <img class="d-block w-100" height="250px" src="{{photo}}" alt="First slide">
-            </div> -->
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
+    <div class="card clickable-card">
+      <div id="demo">
+        <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}">
       </div>
-  
       <div class="card-body">
         <p class="paragraph">{{selectedResturant.restaurantName}}</p>
         <img src="{{selectedResturant.logo}}" width="40px" height="40px"
